# yt-mcp-server

./: .dockerignore  .env.example  2025-12-10-homealanhcworkspaceyt-mcp-serverubuntubac.txt  AGENTS.md  CHANNEL_SUMMARY_GUIDE.md  CLAUDE.md  Dockerfile  FEATURES.md  README.md  UBUNTU_BACKEND_GUIDE.md  UPDATE_WHISPER_FALLBACK.md  Untitled-1  YOUTUBE_SUMMARY_IMPLEMENTATION.md  backend.py  channel_summary_result.json  docker-start.sh  docker-stop.sh  example_youtube_summary.py  install-service.sh  main.py  pyproject.toml  simple-start.sh  simple-stop.sh  start_server.sh  test_async_podcast.py  test_cache.py  test_channel_summary.py  test_latest_episode.py  test_podcast.py  test_podcast_summary.py  test_podcast_view.py  test_subtitle_fallback.py  test_view_url.py  ubuntu_backend.py  uninstall-service.sh  yt-mcp-server.service.template
mcp-n8n-proxy/: .env.example  .gitignore  FASTMCP_SUMMARY.md  README.md  diagnose_api.py  pyproject.toml  test_fastmcp.py  test_tool.py
mcp-n8n-proxy/mcp_n8n_proxy/: __init__.py  server.py  server_fastmcp.py  server_fastmcp_standalone.py  server_http.py
mcp-n8n-proxy/mcp_n8n_proxy/tools/: __init__.py  create_n8n_workflow.py
static/: summary_viewer.html
