[project]
name = "yt-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "mcp>=1.22.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.11.12",
]
